[gd_scene load_steps=20 format=3 uid="uid://d2oyjj2d3bk2b"]

[ext_resource type="Script" uid="uid://dmtkdwpne7rwi" path="res://Scripts/PlayerMovement.gd" id="1_dewec"]
[ext_resource type="Shader" uid="uid://b87hwtqukjhwg" path="res://Shaders/Player/CameraEffect.gdshader" id="2_5ixxa"]
[ext_resource type="Shader" uid="uid://c23ebcyy3wo5f" path="res://Shaders/Player/VhsEffect.gdshader" id="3_nn08x"]
[ext_resource type="Shader" uid="uid://c8lpvur0rfpsy" path="res://Shaders/Player/FishEyeEffect.gdshader" id="4_52ee3"]
[ext_resource type="Script" uid="uid://2utrou1krv5t" path="res://Scripts/Inventory/CompartmentUI.gd" id="5_5ixxa"]
[ext_resource type="Script" uid="uid://dawk1dcnjggnh" path="res://Scripts/Inventory/Items/Item.gd" id="6_52ee3"]
[ext_resource type="Texture2D" uid="uid://chw2sl3s8qj2h" path="res://Images/icon.svg" id="7_52ee3"]
[ext_resource type="Texture2D" uid="uid://kbevcyv5t7g7" path="res://Images/CheckeredPattern.png" id="8_bhhdu"]
[ext_resource type="PackedScene" uid="uid://bcqaucxjnurud" path="res://Bag.tscn" id="9_megsn"]
[ext_resource type="Script" uid="uid://frsbljmuu5p5" path="res://Scripts/BagViewport.gd" id="10_yoq75"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wwrpy"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_dewec"]
dof_blur_far_enabled = true
dof_blur_far_transition = 4.0
dof_blur_near_enabled = true
dof_blur_near_distance = 1.0
dof_blur_amount = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rdibx"]
shader = ExtResource("2_5ixxa")
shader_parameter/RedOffset = 0.003
shader_parameter/GreenOffset = 0.00100005
shader_parameter/BlueOffset = 4.75e-08

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5m5cn"]
frequency = 0.11
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_eayxn"]
width = 2000
height = 2000
seamless_blend_skirt = 0.0
noise = SubResource("FastNoiseLite_5m5cn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ak4j"]
shader = ExtResource("3_nn08x")
shader_parameter/vhs_resolution = Vector2(1500, 1500)
shader_parameter/samples = 3
shader_parameter/crease_noise = 1.0
shader_parameter/crease_opacity = 0.5
shader_parameter/filter_intensity = 0.0
shader_parameter/tape_crease_smear = 0.2
shader_parameter/tape_crease_intensity = 0.1
shader_parameter/tape_crease_jitter = 0.1
shader_parameter/tape_crease_speed = 0.5
shader_parameter/tape_crease_discoloration = 0.0
shader_parameter/bottom_border_thickness = 3.0
shader_parameter/bottom_border_jitter = 6.0
shader_parameter/noise_intensity = 0.2
shader_parameter/noise_texture = SubResource("NoiseTexture2D_eayxn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ff8s"]
shader = ExtResource("4_52ee3")
shader_parameter/effect_amount = 1.75

[sub_resource type="Resource" id="Resource_bhhdu"]
script = ExtResource("6_52ee3")
item_name = "New Item"
description = ""
texture = ExtResource("7_52ee3")
size = Vector2i(2, 2)
stackable = false
max_stack_size = 1
metadata/_custom_type_script = "uid://dawk1dcnjggnh"

[sub_resource type="Resource" id="Resource_megsn"]
script = ExtResource("6_52ee3")
item_name = "New Item"
description = ""
texture = ExtResource("8_bhhdu")
size = Vector2i(1, 1)
stackable = false
max_stack_size = 1
metadata/_custom_type_script = "uid://dawk1dcnjggnh"

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0.499999, 0, 0, 0, 0.5, 0, 0, 0, 0.499999, 0, 0, 0)
script = ExtResource("1_dewec")
bag_max_rotation_degrees = 75.0
bag_rotation_speed = 10.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_wwrpy")

[node name="Head" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.566768, 0)
attributes = SubResource("CameraAttributesPractical_dewec")

[node name="PlayerTorch" type="SpotLight3D" parent="Head"]
unique_name_in_owner = true
light_color = Color(1, 1, 0.839216, 1)
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_blur = 5.545
distance_fade_begin = 2.0
distance_fade_shadow = 1204.84
distance_fade_length = 745.73
spot_range = 7.0
spot_angle = 41.918
spot_angle_attenuation = 4.2871

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenEffects" type="Control" parent="UI"]
anchors_preset = 0

[node name="ChromaticVignette" type="CanvasLayer" parent="UI/ScreenEffects"]

[node name="ColorRect" type="ColorRect" parent="UI/ScreenEffects/ChromaticVignette"]
material = SubResource("ShaderMaterial_rdibx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Glitch" type="CanvasLayer" parent="UI/ScreenEffects"]

[node name="ColorRect" type="ColorRect" parent="UI/ScreenEffects/Glitch"]
material = SubResource("ShaderMaterial_5ak4j")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FishEye" type="CanvasLayer" parent="UI/ScreenEffects"]

[node name="ColorRect2" type="ColorRect" parent="UI/ScreenEffects/FishEye"]
material = SubResource("ShaderMaterial_5ff8s")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Inventory" type="CanvasLayer" parent="UI/Inventory"]
unique_name_in_owner = true
layer = 2

[node name="Compartment" type="GridContainer" parent="UI/Inventory/Inventory"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.0
offset_top = -306.0
offset_right = 306.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
script = ExtResource("5_5ixxa")
compartment_size = Vector2i(4, 4)
test_item = SubResource("Resource_bhhdu")
test_item2 = SubResource("Resource_megsn")

[node name="Hud" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugInfo" type="CanvasLayer" parent="UI/Hud"]
layer = 2

[node name="DebugInfo" type="Label" parent="UI/Hud/DebugInfo"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="BagViewport" type="SubViewportContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="UI/BagViewport"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4
script = ExtResource("10_yoq75")

[node name="Camera3D" type="Camera3D" parent="UI/BagViewport/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -23.8734, 0)

[node name="Bag" parent="UI/BagViewport/SubViewport/Camera3D" instance=ExtResource("9_megsn")]
unique_name_in_owner = true
transform = Transform3D(0.499999, 0, 0, 0, 0.5, 0, 0, 0, 0.499999, 0, -0.0630875, -1.21388)

[node name="BagTorch" type="SpotLight3D" parent="UI/BagViewport/SubViewport/Camera3D"]
unique_name_in_owner = true
light_color = Color(1, 1, 0.839216, 1)
light_volumetric_fog_energy = 0.0
shadow_enabled = true
shadow_blur = 5.545
distance_fade_begin = 2.0
distance_fade_shadow = 1204.84
distance_fade_length = 745.73
spot_range = 7.0
spot_angle = 41.918
spot_angle_attenuation = 4.2871
